Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integration/test_0_storage_network.html
+++ b/backend/integration/test_0_storage_network.html
@@ -60,7 +60,8 @@ def cluster_network(request, api_client, unique_name):
     all_nodes = set(n[&#39;id&#39;] for n in data[&#39;data&#39;])
     try:
         # vlad_nic configured on specific cluster network, reuse it
-        return next(cnet for cnet, nodes in cnet_nodes.items() if all_nodes == set(nodes))
+        yield next(cnet for cnet, nodes in cnet_nodes.items() if all_nodes == set(nodes))
+        return None
     except StopIteration:
         configured_nodes = reduce(add, cnet_nodes.values(), [])
         if any(n in configured_nodes for n in all_nodes):
@@ -259,7 +260,8 @@ def cluster_network(request, api_client, unique_name):
     all_nodes = set(n[&#39;id&#39;] for n in data[&#39;data&#39;])
     try:
         # vlad_nic configured on specific cluster network, reuse it
-        return next(cnet for cnet, nodes in cnet_nodes.items() if all_nodes == set(nodes))
+        yield next(cnet for cnet, nodes in cnet_nodes.items() if all_nodes == set(nodes))
+        return None
     except StopIteration:
         configured_nodes = reduce(add, cnet_nodes.values(), [])
         if any(n in configured_nodes for n in all_nodes):
