--- a/backend/integration/test_vm_functions.html
+++ b/backend/integration/test_vm_functions.html
@@ -465,7 +465,8 @@ class TestVMOperations:
             f&#34;{data}&#34;
         )
 
-        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                        if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
         code, data = api_client.vms.migrate(unique_vm_name, new_host)
         assert 204 == code, (code, data)
@@ -503,7 +504,8 @@ class TestVMOperations:
             f&#34;{data}&#34;
         )
 
-        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                        if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
         code, data = api_client.vms.migrate(unique_vm_name, new_host)
         assert 204 == code, (code, data)
@@ -4033,7 +4035,8 @@ class TestVMOperations:
             f&#34;{data}&#34;
         )
 
-        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                        if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
         code, data = api_client.vms.migrate(unique_vm_name, new_host)
         assert 204 == code, (code, data)
@@ -4071,7 +4074,8 @@ class TestVMOperations:
             f&#34;{data}&#34;
         )
 
-        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+        new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                        if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
         code, data = api_client.vms.migrate(unique_vm_name, new_host)
         assert 204 == code, (code, data)
@@ -4203,7 +4207,8 @@ Exepected Result:<ul>
         f&#34;{data}&#34;
     )
 
-    new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+    new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                    if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
     code, data = api_client.vms.migrate(unique_vm_name, new_host)
     assert 204 == code, (code, data)
@@ -4344,7 +4349,8 @@ Exepected Result:<ul>
         f&#34;{data}&#34;
     )
 
-    new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;] if cur_host != h[&#39;id&#39;])
+    new_host = next(h[&#39;id&#39;] for h in host_data[&#39;data&#39;]
+                    if cur_host != h[&#39;id&#39;] and not h[&#39;spec&#39;].get(&#39;taint&#39;))
 
     code, data = api_client.vms.migrate(unique_vm_name, new_host)
     assert 204 == code, (code, data)
