--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -62,6 +62,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_vm_snapshot" href="test_vm_snapshot.html">harvester_e2e_tests.integration.test_vm_snapshot</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.test_volumes" href="test_volumes.html">harvester_e2e_tests.integration.test_volumes</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -101,6 +105,7 @@
 <li><code><a title="harvester_e2e_tests.integration.test_upgrade" href="test_upgrade.html">harvester_e2e_tests.integration.test_upgrade</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_vm" href="test_vm.html">harvester_e2e_tests.integration.test_vm</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_vm_functions" href="test_vm_functions.html">harvester_e2e_tests.integration.test_vm_functions</a></code></li>
+<li><code><a title="harvester_e2e_tests.integration.test_vm_snapshot" href="test_vm_snapshot.html">harvester_e2e_tests.integration.test_vm_snapshot</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_volumes" href="test_volumes.html">harvester_e2e_tests.integration.test_volumes</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.vmconsole" href="vmconsole.html">harvester_e2e_tests.integration.vmconsole</a></code></li>
 </ul>
