--- a/backend/integration/test_backup_restore.html
+++ b/backend/integration/test_backup_restore.html
@@ -152,6 +152,33 @@ def config_backup_target(api_client, conflict_retries, backup_config, wait_timeo
 
     yield spec
 
+    # remove unbound LH backupVolumes
+    code, data = api_client.lhbackupvolumes.get()
+    assert 200 == code, &#34;Failed to list lhbackupvolumes&#34;
+
+    check_names = []
+    for volume_data in data[&#34;items&#34;]:
+        volume_name = volume_data[&#34;metadata&#34;][&#34;name&#34;]
+        backup_name = volume_data[&#34;status&#34;][&#34;lastBackupName&#34;]
+        if not backup_name:
+            api_client.lhbackupvolumes.delete(volume_name)
+            check_names.append(volume_name)
+
+    endtime = datetime.now() + timedelta(seconds=wait_timeout)
+    while endtime &gt; datetime.now():
+        for name in check_names[:]:
+            code, data = api_client.lhbackupvolumes.get(name)
+            if 404 == code:
+                check_names.remove(name)
+        if not check_names:
+            break
+        sleep(3)
+    else:
+        raise AssertionError(
+            f&#34;Failed to delete unbound lhbackupvolumes: {check_names}\n&#34;
+            f&#34;Last API Status({code}): {data}&#34;
+            )
+
     # restore to original backup-target and remove backups not belong to it
     code, data = api_client.settings.update(&#39;backup-target&#39;, origin_spec)
     code, data = api_client.backups.get()
@@ -1310,6 +1337,33 @@ def config_backup_target(api_client, conflict_retries, backup_config, wait_timeo
     )
 
     yield spec
+
+    # remove unbound LH backupVolumes
+    code, data = api_client.lhbackupvolumes.get()
+    assert 200 == code, &#34;Failed to list lhbackupvolumes&#34;
+
+    check_names = []
+    for volume_data in data[&#34;items&#34;]:
+        volume_name = volume_data[&#34;metadata&#34;][&#34;name&#34;]
+        backup_name = volume_data[&#34;status&#34;][&#34;lastBackupName&#34;]
+        if not backup_name:
+            api_client.lhbackupvolumes.delete(volume_name)
+            check_names.append(volume_name)
+
+    endtime = datetime.now() + timedelta(seconds=wait_timeout)
+    while endtime &gt; datetime.now():
+        for name in check_names[:]:
+            code, data = api_client.lhbackupvolumes.get(name)
+            if 404 == code:
+                check_names.remove(name)
+        if not check_names:
+            break
+        sleep(3)
+    else:
+        raise AssertionError(
+            f&#34;Failed to delete unbound lhbackupvolumes: {check_names}\n&#34;
+            f&#34;Last API Status({code}): {data}&#34;
+            )
 
     # restore to original backup-target and remove backups not belong to it
     code, data = api_client.settings.update(&#39;backup-target&#39;, origin_spec)
