Update testing docs
Signed-off-by: khushboo-rancher <khushboo-rancher@users.noreply.github.com>

--- a/backend/integration/test_vm_functions.html
+++ b/backend/integration/test_vm_functions.html
@@ -189,7 +189,7 @@ def unset_cpu_memory_overcommit(api_client):
     code, data = api_client.settings.get(&#39;overcommit-config&#39;)
     assert 200 == code, (code, data)
 
-    origin_val = json.loads(data.get(&#39;value&#39;, {}))
+    origin_val = json.loads(data.get(&#39;value&#39;, &#34;{}&#34;))
     spec = api_client.settings.Spec.from_dict(data)
     spec.cpu = spec.memory = 100
     code, data = api_client.settings.update(&#39;overcommit-config&#39;, spec)
@@ -2932,7 +2932,7 @@ def unset_cpu_memory_overcommit(api_client):
     code, data = api_client.settings.get(&#39;overcommit-config&#39;)
     assert 200 == code, (code, data)
 
-    origin_val = json.loads(data.get(&#39;value&#39;, {}))
+    origin_val = json.loads(data.get(&#39;value&#39;, &#34;{}&#34;))
     spec = api_client.settings.Spec.from_dict(data)
     spec.cpu = spec.memory = 100
     code, data = api_client.settings.update(&#39;overcommit-config&#39;, spec)
