--- a/backend/fixtures/index.html
+++ b/backend/fixtures/index.html
@@ -91,6 +91,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.fixtures.terraform" href="terraform.html">harvester_e2e_tests.fixtures.terraform</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.fixtures.user" href="user.html">harvester_e2e_tests.fixtures.user</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -144,6 +148,7 @@
 <li><code><a title="harvester_e2e_tests.fixtures.rancher_api_client" href="rancher_api_client.html">harvester_e2e_tests.fixtures.rancher_api_client</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.session" href="session.html">harvester_e2e_tests.fixtures.session</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.support_bundle" href="support_bundle.html">harvester_e2e_tests.fixtures.support_bundle</a></code></li>
+<li><code><a title="harvester_e2e_tests.fixtures.terraform" href="terraform.html">harvester_e2e_tests.fixtures.terraform</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.user" href="user.html">harvester_e2e_tests.fixtures.user</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.virtualmachines" href="virtualmachines.html">harvester_e2e_tests.fixtures.virtualmachines</a></code></li>
 <li><code><a title="harvester_e2e_tests.fixtures.vm" href="vm.html">harvester_e2e_tests.fixtures.vm</a></code></li>
