--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -74,6 +74,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_z_terraform" href="test_z_terraform.html">harvester_e2e_tests.integration.test_z_terraform</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.vmconsole" href="vmconsole.html">harvester_e2e_tests.integration.vmconsole</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -112,6 +116,7 @@
 <li><code><a title="harvester_e2e_tests.integration.test_vm_networks" href="test_vm_networks.html">harvester_e2e_tests.integration.test_vm_networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_vm_snapshot" href="test_vm_snapshot.html">harvester_e2e_tests.integration.test_vm_snapshot</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_volumes" href="test_volumes.html">harvester_e2e_tests.integration.test_volumes</a></code></li>
+<li><code><a title="harvester_e2e_tests.integration.test_z_terraform" href="test_z_terraform.html">harvester_e2e_tests.integration.test_z_terraform</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.vmconsole" href="vmconsole.html">harvester_e2e_tests.integration.vmconsole</a></code></li>
 </ul>
 </li>
