Update testing docs
Signed-off-by: bk201 <bk201@users.noreply.github.com>

--- a/backend/integration/index.html
+++ b/backend/integration/index.html
@@ -42,6 +42,10 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="harvester_e2e_tests.integration.test_networks" href="test_networks.html">harvester_e2e_tests.integration.test_networks</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="harvester_e2e_tests.integration.test_rancher_integration" href="test_rancher_integration.html">harvester_e2e_tests.integration.test_rancher_integration</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -108,6 +112,7 @@
 <li><code><a title="harvester_e2e_tests.integration.test_backup_restore" href="test_backup_restore.html">harvester_e2e_tests.integration.test_backup_restore</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_hosts" href="test_hosts.html">harvester_e2e_tests.integration.test_hosts</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_images" href="test_images.html">harvester_e2e_tests.integration.test_images</a></code></li>
+<li><code><a title="harvester_e2e_tests.integration.test_networks" href="test_networks.html">harvester_e2e_tests.integration.test_networks</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_rancher_integration" href="test_rancher_integration.html">harvester_e2e_tests.integration.test_rancher_integration</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_terraform" href="test_terraform.html">harvester_e2e_tests.integration.test_terraform</a></code></li>
 <li><code><a title="harvester_e2e_tests.integration.test_upgrade" href="test_upgrade.html">harvester_e2e_tests.integration.test_upgrade</a></code></li>
